Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14679

RocksdB plugin fails to load with "Loading of unknown plugin ROCKSDB_CFSTATS is prohibited..."

    XMLWordPrintable

Details

    Description

      It looks like this:

        2017-12-16 17:20:29 0 [Warning] Plugin 'ROCKSDB' is of maturity level alpha while the server is beta
        2017-12-16 17:20:29 0 [ERROR] Can't open shared library 'ha_rocksdb.so' (errno: 1, Loading of unknown plugin ROCKSDB_CFSTATS is prohibited by --plugin-maturity=alpha)
        2017-12-16 17:20:29 0 [ERROR] Can't open shared library 'ha_rocksdb.so' (errno: 1, Loading of unknown plugin ROCKSDB_DBSTATS is prohibited by --plugin-maturity=alpha)
        2017-12-16 17:20:29 0 [ERROR] Can't open shared library 'ha_rocksdb.so' (errno: 1, Loading of unknown plugin ROCKSDB_PERF_CONTEXT is prohibited by --plugin-maturity=alpha)
        2017-12-16 17:20:29 0 [ERROR] Can't open shared library 'ha_rocksdb.so' (errno: 1, Loading of unknown plugin ROCKSDB_PERF_CONTEXT_GLOBAL is prohibited by --plugin-maturity=alpha)
        2017-12-16 17:20:29 0 [ERROR] Can't open shared library 'ha_rocksdb.so' (errno: 1, Loading of unknown plugin ROCKSDB_CF_OPTIONS is prohibited by --plugin-maturity=alpha)
        2017-12-16 17:20:29 0 [ERROR] Can't open shared library 'ha_rocksdb.so' (errno: 1, Loading of unknown plugin ROCKSDB_COMPACTION_STATS is prohibited by --plugin-maturity=alpha)
        2017-12-16 17:20:29 0 [ERROR] Can't open shared library 'ha_rocksdb.so' (errno: 1, Loading of unknown plugin ROCKSDB_GLOBAL_INFO is prohibited by --plugin-maturity=alpha)
      

      The plugin itself is loaded at the end:

       
        2017-12-16 17:20:29 0 [ERROR] Couldn't load plugins from 'ha_rocksdb.so'.
        2017-12-16 17:20:29 0 [Note] RocksDB: 5 column families found
        2017-12-16 17:20:29 0 [Note] RocksDB: Column Families at start:
      ...
        2017-12-16 17:20:29 0 [Note] RocksDB: Table_store: loaded DDL data for 9 tables
        2017-12-16 17:20:30 0 [Note] RocksDB: global statistics using get_sched_indexer_t indexer
        2017-12-16 17:20:30 0 [Note] MyRocks storage engine plugin has been successfully initialized.
      

      but I_S sub plugins are not

      Attachments

        Activity

          People

            psergei Sergei Petrunia
            psergei Sergei Petrunia
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: