MDEV-14679: RocksdB plugin fails to load with "Loading of unknown plugin ROCKSDB_CFSTATS

Set maturity level of all "Sub-plugins" to be the same as the main maturity level.